Add Dockerfile and env-var config for Render deployment